<resources>
    <string name="app_name">Calculator</string>
    <string name="hint_zero">0</string>
    <string name="num_zero">0</string>
    <string name="all_clear">AC</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="backspace">backspace</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="multiply">multiply</string>
    <string name="divide">divide</string>
    <string name="result">result</string>
    <string name="percent">percent</string>
    <string name="dot">.</string>
</resources>