<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/result_et"
            android:layout_width="wrap_content"
            android:layout_height="320dp"
            android:layout_marginBottom="6dp"
            android:autofillHints=""
            android:background="@android:color/transparent"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/roboto"
            android:gravity="bottom|end"
            android:hint="@string/hint_zero"
            android:inputType="number"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:selectAllOnFocus="false"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColorHint="#78909C"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintDimensionRatio="h,1:0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="409dp"
            android:layout_height="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_et">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/clear_all_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.08"
                    android:background="@drawable/ripple_effect"
                    android:fontFamily="@font/roboto"
                    android:text="@string/all_clear"
                    android:textColor="@color/blue_500"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/backspace_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.055"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/backspace"
                    app:srcCompat="@drawable/press_backspace_effect"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/percent_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.07"
                    android:background="@drawable/ripple_effect"
                    android:contentDescription="@string/percent"
                    android:src="@drawable/ic_percent_18" />

                <ImageButton
                    android:id="@+id/plus_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect"
                    android:clickable="true"
                    android:contentDescription="@string/plus"
                    android:focusable="true"

                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_plus_28" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num_seven_btn"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num_seven" />

                <Button
                    android:id="@+id/num_eight_num"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num_eight" />

                <Button
                    android:id="@+id/num_nine_btn"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num_nine" />

                <ImageButton
                    android:id="@+id/minus_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="14.5"
                    android:background="@drawable/ripple_effect"
                    android:contentDescription="@string/minus"
                    app:srcCompat="@drawable/ic_minus_20"
                    tools:ignore="TouchTargetSizeCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num_four_btn"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num_four" />

                <Button
                    android:id="@+id/num_five_btn"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num_five" />

                <Button
                    android:id="@+id/num_six_btn"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num_six" />

                <ImageButton
                    android:id="@+id/multiply_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="14.5"
                    android:background="@drawable/ripple_effect"
                    android:contentDescription="@string/multiply"
                    app:srcCompat="@drawable/ic_multiply_18"
                    tools:ignore="TouchTargetSizeCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num_one_btn"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num_one" />

                <Button
                    android:id="@+id/num_two_btn"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num_two" />

                <Button
                    android:id="@+id/num_three_btn"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num_three"
                    android:textColor="@android:color/primary_text_light" />

                <ImageButton
                    android:id="@+id/divide_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="14.5"
                    android:background="@drawable/ripple_effect"
                    android:contentDescription="@string/divide"
                    app:srcCompat="@drawable/ic_divide_34"
                    tools:ignore="TouchTargetSizeCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/num_zero_btn"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.112"
                    android:text="@string/num_zero"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <Button
                    android:id="@+id/button"
                    style="@style/Number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1.8"
                    android:text="@string/dot" />

                <ImageButton
                    android:id="@+id/result_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.68"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/result"
                    app:srcCompat="@drawable/press_result_effect"
                    tools:ignore="TouchTargetSizeCheck" />

            </TableRow>

        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

